Fix color difference on iOS safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -309,6 +309,7 @@ a { color: #eee; }
   font-family: Georgia,Times,Times New Roman,serif;
   font-size:3.6vw;
   font-weight: bold;
+  color: black;
 
   cursor: pointer;
 
